--- a/about.css
+++ b/about.css
@@ -2,7 +2,7 @@
     margin: 20px 0 0 0;
     padding: 50px 70px;
     width: 100%;
-    height: 60vh;
+    height: 600px;
     font-family: 'Rubik Dirt', cursive;
     background-color: #2e2c2c;
     color: whitesmoke;
