--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 #contact-container {
     width: 100%;
-    height: 100vh;
+    height: 750px;
     background-image: url(images/pexels-gabriela-palai-395198.jpg);
     background-size: cover;
     background-position: center;
@@ -9,7 +9,7 @@
 .contact-box {
     display: flex;
     justify-content: space-evenly;
-    padding: 25vh 15vh;
+    padding: 100px 0;
 }
 
 .contact-form-box {
